syntax = "proto3";

package x_clone.backend.protobuf.apis.followships;

import "google/protobuf/empty.proto";
import "page-request.proto";

option go_package = "generated/";

service FollowshipsAPI {
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc Follow(FollowRequest) returns (google.protobuf.Empty);
  rpc Unfollow(UnfollowRequest) returns (google.protobuf.Empty);

  rpc Follows(FollowsRequest) returns (FollowsResponse);

  rpc GetFollowers(GetFollowersRequest) returns (GetFollowersResponse);
  rpc GetFollowees(GetFolloweesRequest) returns (GetFolloweesResponse);
  rpc GetFollowerAndFolloweeCounts(GetFollowerAndFolloweeCountsRequest) returns (GetFollowerAndFolloweeCountsResponse);
}

message FollowRequest {
  int32 followee_id = 1;
}

message UnfollowRequest {
  int32 followee_id = 1;
}

message FollowsRequest {
  int32 followee_id = 1;
}

message FollowsResponse {
  bool follows = 1;
}

message GetFollowersRequest {
  int32 user_id = 1;

  x_clone.backend.protobuf.PageRequest page_request = 2;
}

message GetFollowersResponse {
  repeated int32 follower_ids = 1;
}

message GetFolloweesRequest {
  int32 user_id = 1;

  x_clone.backend.protobuf.PageRequest page_request = 2;
}

message GetFolloweesResponse {
  repeated int32 followee_ids = 1;
}

message GetFollowerAndFolloweeCountsRequest {
  int32 user_id = 1;
}

message GetFollowerAndFolloweeCountsResponse {
  int64 follower_count = 1;
  int64 followee_count = 2;
}
